# patreon-notifier

./: .gitignore  README.md  auth.py  config.example.py  health_monitor.py  notification_services.py  patreon_notifier.py  pyproject.toml  requirements.txt  state_manager.py
.github/: dependabot.yml
.github/workflows/: ci.yml
cookies/: .gitignore  README.md
patreon_notifier/: __init__.py  __main__.py  auth.py  cli.py  config_loader.py  constants.py  health.py  monitor.py  notification_format.py  notifications.py  state.py  types.py
tests/: conftest.py  test_auth_bootstrap.py  test_auth_cookies.py  test_cli.py  test_config_loader.py  test_health_monitor.py  test_logging_config.py  test_monitor_process.py  test_monitor_stream.py  test_notification_format.py  test_parse_notification.py  test_state_atomic.py  test_state_batch.py
tests/fixtures/: stream_one_page.json
